// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    [],
    [
      "",
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    [],
    [
      1,
      2,
      3,
      4,
      5,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Number 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [],
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Array | String 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    [],
    "foobar",
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 2`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Number 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Function | Number 2`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Function | Object 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Function | Object 2`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 2`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    null,
    [
      "",
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    null,
    [
      1,
      2,
      3,
      4,
      5,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Number 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    null,
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Null | Object 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    null,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Null | String 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    null,
    "foobar",
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    null,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    {},
    [
      "",
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    {},
    [
      1,
      2,
      3,
      4,
      5,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    {},
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Number 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    {},
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    {},
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Object | String 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    {},
    "foobar",
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    {},
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    /foo/g,
    [
      "",
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    /foo/g,
    [
      1,
      2,
      3,
      4,
      5,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    /foo/g,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Number 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    /foo/g,
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    /foo/g,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    /foo/g,
    "foobar",
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    /foo/g,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Array 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    undefined,
    [
      "",
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Array 2`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    undefined,
    [
      1,
      2,
      3,
      4,
      5,
    ],
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    undefined,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Number 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    undefined,
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Object 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    undefined,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [],
  "result": "PENDING",
}
`;

exports[`brute force Undefined | String 1`] = `
{
  "error": {
    "message": "predicate is not a function",
    "type": "TypeError",
  },
  "inputs": [
    undefined,
    "foobar",
  ],
  "label": "errors messages are different",
  "ok": false,
  "ramdaError": {
    "message": "pred is not a function",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined 1`] = `
{
  "error": {
    "message": "\`iterable\` is neither list nor a string",
    "type": "Error",
  },
  "inputs": [
    undefined,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'dropWhile')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
